style.css
/* 
- find a great font
- make the design 
    - simple
    - light colors
    - no corners on buttons.
    - borders will be the contrast of the light themes page, so they will be darkish
*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap');

:root {
    --grid-cols: 1;
    --grid-rows: 1;
}

html,
body {
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    padding: 0;
}
body{
    background-color: #7acbdd;
}
  
#container {
    display: grid;
    grid-template-rows: repeat(var(--grid-rows), calc(500px / var(--grid-rows)));
    grid-template-columns: repeat(var(--grid-cols), calc(500px / var(--grid-cols)));
}
  
.grid-item {
    aspect-ratio: 1;
    text-align: center;
    background-color: #0000003e;
}

header {
    text-align: center;
}
header > .title {
    font-weight: bold;
    font-size: 40px;
    padding: 15px 40px;
    margin: 15px;
    border: 1px solid #000000;
    border-radius: 10px;
}

.content {
    display: flex;
    justify-content: space-evenly;
}

footer {
    font-size: 12px;
    text-align: center;
    padding: 15px 40px;
    margin-top: 35px;
    text-transform: uppercase;
}
ul {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding-inline-start: 0;
    height: 100%;
}

li {
    text-align: center;
}

#reset-button {
    padding: 20px 35px;
    background-color: #7acbdd;
    border-radius: 30px;
    height: 60px;
}

#reset-button:hover {
    background-color: #63a5b4;
}

#color-picker {
    border-radius: 50%;
    height: 60px;
    width: 60px;
    border: none;
    outline: none;
}
#color-picker::-webkit-color-swatch-wrapper {
    padding: 0; 
}
#color-picker::-webkit-color-swatch {
    border: none;
    border-radius: 50%;
}

